--- a/journal/202205.md
+++ b/journal/202205.md
@@ -16,7 +16,7 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 - godcr mainnet release and proposal
 - revoked old tickets
 - proposals
-- 
+- Decred Magazine launch
 
 }
 
@@ -346,44 +346,29 @@ Secured the following news articles:
 
 ## Media
 
-{ _Put notable community content efforts or new projects at the beginning. e.g. a new website, new podcast series, or an important guide how to make the network more robust._ }
-
-- Decred Magazine https://twitter.com/DecredSociety/status/1530562659006939136
-- @DCR\_Uncle shared his guide for running Decred LN nodes https://twitter.com/DCR_Uncle/status/1527329143402029071
-
-{ _Hint: For bullet lists below, use the following format: [Sentence case title]({link}) by @author - optional comment._ }
+[Decred Magazine](https://www.decredmagazine.com/) has been [launched](https://twitter.com/DecredSociety/status/1530562659006939136) by @phoenixgreen to collect all Decred content in one place, give new writers a platform, and archive great past content ([Decred Journal](https://www.decredmagazine.com/tag/decred-journal/) included). The latter is valuable since websites and blogs commonly "evaporate" their content over time and it becomes hard or impossible to recover. Decred Magazine is intended as a community hub, in contrast with [decredsociety.com](https://www.decredsociety.com/) that is more of a [personal blog](https://twitter.com/DecredSociety/status/1530623411919196160).
 
 **Selected articles:**
 
-- {}
+- [How to set up and operate Decred LN nodes](https://gist.github.com/dcr-uncle/11b30f44e73b55cc31fb75881f9b4643) - a guide [shared](https://twitter.com/DCR_Uncle/status/1527329143402029071) by @DCR\_Uncle
+- [The biggest blockchain consensus vote in history goes live!](https://www.decredmagazine.com/the-bigest-blockchain-consensus-vote-in-history-goes-live/) by @phoenixgreen
+- [The PoW rebellion](https://www.decredmagazine.com/the-pow-rebellion/) by @phoenixgreen
 
 **Videos:**
 
-- [Decred Block Explorer - DCRDATA Series Part 1](https://www.youtube.com/watch?v=o4Cye1CRThs) by @DecredSociety
-- [Peer to Peer Exchange - Decred and the state of the market](https://www.youtube.com/watch?v=vqzaEdtmCsI) by @DecredSociety and @Exitus
-- [Decred Monthly Recap - 2.66x Increase in Staking Rewards, Dev Updates, Big Hard-Fork Inbound!](https://www.youtube.com/watch?v=uOHiDTj9Prs) by @Exitus and @DajanaDcr
-- [DCRDATA Looking into a block - Decred Fundamentals v2](https://www.youtube.com/watch?v=nsMrdK45cK8) by @DecredSociety
-- [DCRDATA Proof of Work Charts - Decred Fundamentals](https://www.youtube.com/watch?v=t_pcHfJS0uw) by @DecredSociety
-- [DCRDATA Proof of Stake Charts - Decred Fundamentals](https://www.youtube.com/watch?v=eRtogHA_2_w) by @DecredSociety
-- [This Miner is QUIET, PROFITABLE, and BROKEN WTF?!](https://www.youtube.com/watch?v=skv8RehpaaU) (DR5 Miner and Subsidy Change) by @VoskCoin
-- [Decred staking rewards just increased 2.6x! Let’s spread the word!](https://twitter.com/DajanaDcr/status/1526306473051045892) (TikTok) by @DajanaDcr and @Exitus
+- [Decred block explorer - DCRDATA series part 1](https://www.youtube.com/watch?v=o4Cye1CRThs) by @phoenixgreen { remove, was in 202204 }
+- [Peer to Peer Exchange - Decred and the state of the market](https://www.youtube.com/watch?v=vqzaEdtmCsI) by @phoenixgreen and @Exitus
+- [Decred Monthly Recap - 2.66x increase in staking rewards, dev updates, big hard-fork inbound!](https://www.youtube.com/watch?v=uOHiDTj9Prs) by @Exitus and @DajanaDcr
+- [DCRDATA Looking into a block - Decred Fundamentals v2](https://www.youtube.com/watch?v=nsMrdK45cK8) by @phoenixgreen - also [in text](https://www.decredmagazine.com/dcrdata-looking-into-a-block/)
+- [DCRDATA Proof of Work charts - Decred Fundamentals](https://www.youtube.com/watch?v=t_pcHfJS0uw) by @phoenixgreen - also [in text](https://www.decredmagazine.com/dcrdata-proof-of-work-charts/)
+- [DCRDATA Proof of Stake charts - Decred Fundamentals](https://www.youtube.com/watch?v=eRtogHA_2_w) by @phoenixgreen - also [in text](https://www.decredmagazine.com/dcrdata-proof-of-stake-charts/)
+- [This miner is QUIET, PROFITABLE, and BROKEN WTF?!](https://www.youtube.com/watch?v=skv8RehpaaU) (DR5 Miner and Subsidy Change) by @VoskCoin
+- [Decred staking rewards just increased 2.6x! Let's spread the word!](https://twitter.com/DajanaDcr/status/1526306473051045892) (TikTok) by @DajanaDcr and @Exitus
+- [Decred code history visualized](https://twitter.com/karamblez/status/1528173850642505728) by @karamble
 
+**Audio**:
 
-**Audio:**
-
-- {}
-
-**Art and fun:**
-
-- @karamble's latest visualizazation of Decred code evolution https://twitter.com/karamblez/status/1528173850642505728
-
-**Translations:**
-
-- {}
-
-**Non-English content:**
-
-- {}
+- Videos by @phoenixgreen (aka Decred Society) are also available in the [podcast format on anchor.fm](https://anchor.fm/decred-society/).
 
 
 ## Discussions
