--- a/journal/202205.md
+++ b/journal/202205.md
@@ -350,7 +350,7 @@ Secured the following news articles:
 
 **Selected articles:**
 
-- [How to set up and operate Decred LN nodes](https://gist.github.com/dcr-uncle/11b30f44e73b55cc31fb75881f9b4643) - a guide [shared](https://twitter.com/DCR_Uncle/status/1527329143402029071) by @DCR\_Uncle
+- [Decred Lightning node setup guide](https://gist.github.com/dcr-uncle/11b30f44e73b55cc31fb75881f9b4643) by @DCR\_Uncle
 - [The biggest blockchain consensus vote in history goes live!](https://www.decredmagazine.com/the-bigest-blockchain-consensus-vote-in-history-goes-live/) by @phoenixgreen
 - [The PoW rebellion](https://www.decredmagazine.com/the-pow-rebellion/) by @phoenixgreen
 
@@ -373,22 +373,16 @@ Secured the following news articles:
 
 ## Discussions
 
-Comm systems news:
-
-- { _e.g. added/removed chant channels, changes how comms work, etc_ }
-
-{ _Hint: Interesting discussions that generated new ideas or perspectives._ }
-
 Selected Reddit posts:
 
-- [Weekly Contribution Streaks](https://www.reddit.com/r/decred/comments/v0eus3/weekly_contribution_streaks_tards_unite/) by u/ersfbddfgwe
-- [Decred Mining Thread](https://www.reddit.com/r/decred/comments/unh7nn/decred_mining/) by u/Leftoverlose
+- [Weekly Contribution Streaks](https://www.reddit.com/r/decred/comments/v0eus3/weekly_contribution_streaks_tards_unite/) is a new weekly activity from u/ersfbddfgwe that seeks to break the common mental barrier "I can't contribute anything because I'm not a developer :(". The "rules" are simple: just show up and write about _anything_ you did, big or small, with an optional DCR address for tips. There is an ongoing discussion about how to better rank and reward contributions.
 
+- In [Decred Mining Thread](https://www.reddit.com/r/decred/comments/unh7nn/decred_mining/) miners have been sharing the challenges of mining DCR after their share of the block reward was reduced from 60% to 10%.
 
 Selected Twitter discussions:
 
-- [Implementing SPV trading wallets for the DCRDEX. What it means and why Devs are focused on SPV](https://twitter.com/blockchainbuck/status/1531156971759575040?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1531156971759575040%7Ctwgr%5E%7Ctwcon%5Es1_&ref_url=https%3A%2F%2Fwww.redditmedia.com%2Fmediaembed%2Fv1n0xl%3Fresponsive%3Dtrueis_nightmode%3Dfalse) by @Buck
-- [Implementing a custom workflow for creating @ethereum ERC-20 wallets. What tokens should we do and why?](https://twitter.com/blockchainbuck/status/1527105720285552641?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1527105720285552641%7Ctwgr%5E%7Ctwcon%5Es1_&ref_url=https%3A%2F%2Fwww.redditmedia.com%2Fmediaembed%2Fut0898%3Fresponsive%3Dtrueis_nightmode%3Dfalse) by @Buck
+- Implementing [SPV trading wallets](https://twitter.com/blockchainbuck/status/1531156971759575040) for the DCRDEX. What it means and why the devs are focused on SPV, by @buck54321.
+- Implementing a custom workflow for creating [Ethereum ERC-20 wallets](https://twitter.com/blockchainbuck/status/1527105720285552641). What tokens should we do and why? by @buck54321
 
 
 ## Markets
