Rel Ext cleanup

--- a/journal/202205.md
+++ b/journal/202205.md
@@ -396,27 +396,13 @@ In May DCR was trading between USD 30.00-58.68 / BTC 0.00103-0.00190. The averag
 
 ## Relevant External
 
-{ _Hint: Besides dramatic "epic fails", try to also report some "epic wins" in areas relevant to Decred. We can learn from both._ }
-
-{ _Hint: Follow or not follow the suggested grouping of stories below._ }
-
-{ _Cryptocurrency L1 tech: PoW, ASIC resistance, full nodes, network security, etc._ }
-
 Insider trading in the crypto space is increasingly in the spotlight. The Wall Street Journal featured an [article](https://www.wsj.com/articles/crypto-might-have-an-insider-trading-problem-11653084398) about suspected insider trading around exchange listings on Binance, Coinbase and FTX. The analysis was conducted by Argus Inc based on public blockchain records.
 
 The former OpenSea product manager Nathaniel Chastain, who lost their job over profiting from the listing of NFTs on the OpenSea front page in September, has now been [arrested](https://www.cnbc.com/2022/06/01/former-opensea-employee-charged-in-first-ever-nft-insider-trading-case.html) and charged with insider trading by prosecutors in New York's Southern District. Although the NFTs in question are not the usual securities which insider trading laws apply to, the DA is alleging that Chastain injured his employer (OpenSea) by misappropriating information.
 
 Actor Seth Green [lost](https://www.buzzfeednews.com/article/sarahemerson/seth-green-bored-ape-stolen-tv-show) his bored ape in a phishing incident, made even more consequential by the fact that the ape had been set to star in a new show he was developing, *White Horse Tavern*. In June Green paid a $260,000 [ransom](https://www.businessinsider.com/seth-green-pays-260000-return-stolen-bored-ape-ethereum-nft-2022-6) to secure the return of the ape, so that the show could go on (without raising a lot of copyright questions over whether the stolen ape's image could be used).
 
-HEX
-
-{ _L2+ tech: "Smart" contracts, DEX projects._ }
-
-{ _Governance, finances, funding, chain forks, community splits._ }
-
-{ _Relevant exchanges and websites._ }
-
-{ _Other: Regulations, privacy, security, fun._ }
+HEX { HEX? }
 
 That's all for May. Share your updates for the next issue in our [#journal](https://chat.decred.org/#/room/#journal:decred.org) chat room.
 
