--- a/journal/202205.md
+++ b/journal/202205.md
@@ -56,7 +56,7 @@ The general direction in May was to further leverage the consensus changes that 
 - Reworked [old block rejection](https://github.com/decred/dcrd/pull/2945) logic to replace the use of checkpoints with the `assumevalid` block (hard-coded in each release). Semantics have been clarified to reflect that "checkpoints" are now only used for handling old forks and are no longer used for optimizations (that now rely on other methods). The `--nocheckpoints` CLI option has been replaced with `--allowoldforks`. With this change, the role of checkpoints is reduced to a minimum, which is desirable since they are a kind of a workaround.
 - Removed the deprecated [address index](https://github.com/decred/dcrd/pull/2930) along with the associated CLI flags (`--addrindex` and `--dropaddrindex`) and `searchrawtransactions` JSON-RPC. Address index was a lot of overhead from a development perspective to maintain, it wasn't used by anything of note, and it didn't really easily provide what most people want from addresses anyway, which is a full balance as opposed to all of the individual transactions. All of the information it provided, and more, is available via dcrdata.
 - Added a function to make [basic transaction sanity](https://github.com/decred/dcrd/pull/2949) checks to the `blockchain/standalone` module, which is nice for consumers (e.g. DCRDEX) since this module has very few dependencies.
-- Implemented [header proof storage](https://github.com/decred/dcrd/pull/2938). This will avoid recalculating commitment hashes by storing/loading them from disk. Currently there is only one type of commitments - the compact block filters used in SPV, but more may be added in the future. This change comes with a one-way database upgrade.
+- Implemented [header proof storage](https://github.com/decred/dcrd/pull/2938). This will avoid recalculating commitment hashes by storing/loading them from disk. This change comes with a one-way database upgrade. The concept of "block header commitments" sounds scary and takes time to understand, but it is a powerful piece of tech. It was described in detail in the [proposal](https://proposals.decred.org/proposals/0a1ff84), but in short, it stores tiny fingerprints of blockchain data which allow to build fast _and_ secure lightweight apps. Currently there is only one type of commitments - the "compact block filters" that allow light wallets to find users' transactions quickly and securely. More commitments for other use cases may be added in the future.
 - Made [`blockchain`](https://github.com/decred/dcrd/pull/2952) package internal and not exported. This is part of a continuing overall effort to reduce the total number of exported packages and modules to reduce the maintenance burden, and eventually get to the point it will be possible to follow [semantic versioning](https://semver.org/) for the root module.
 - Continued [code](https://github.com/decred/dcrd/pull/2922) [cleanup](https://github.com/decred/dcrd/pull/2954) enabled by the recent consensus changes.
 
