Media tweak Decred Magazine text

--- a/journal/202205.md
+++ b/journal/202205.md
@@ -343,7 +343,7 @@ Secured the following news articles:
 
 ## Media
 
-[Decred Magazine](https://www.decredmagazine.com/) has been [launched](https://twitter.com/DecredSociety/status/1530562659006939136) by @phoenixgreen to collect all Decred content in one place, give new writers a platform, and archive great past content ([Decred Journal](https://www.decredmagazine.com/tag/decred-journal/) included). The latter is valuable since websites and blogs commonly "evaporate" their content over time and it becomes hard or impossible to recover. Decred Magazine is intended as a community hub, in contrast with [decredsociety.com](https://www.decredsociety.com/) that is more of a [personal blog](https://twitter.com/DecredSociety/status/1530623411919196160).
+[Decred Magazine](https://www.decredmagazine.com/) has been [launched](https://twitter.com/DecredSociety/status/1530562659006939136) by @phoenixgreen to collect all Decred content in one place, give new writers a platform, and archive great past content ([Decred Journal](https://www.decredmagazine.com/tag/decred-journal/) included). The latter is valuable since websites and blogs commonly "evaporate" their content over time and it becomes hard or impossible to recover. As of writing, around 300 posts have been imported and 8 authors have explicitly agreed to add their content. Decred Magazine is intended as a replacement for [decredsociety.com](https://www.decredsociety.com/) launched earlier.
 
 **Selected articles:**
 
@@ -413,6 +413,6 @@ Most information from third parties is relayed directly from the source after a 
 Credits (alphabetical order):
 
 - writing and editing: bee, bochinchero, Exitus, l1ndseymm, richardred
-- reviews and feedback: davecgh, matheusd
+- reviews and feedback: davecgh, matheusd, phoenixgreen
 - title image: {}
 - funding: Decred stakeholders
