Add section for activated consensus changes

--- a/journal/202205.md
+++ b/journal/202205.md
@@ -12,8 +12,10 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 { _Month's highlights, no links here, 5-7 bullets max._
 
+- four consensus changes activated
 - core software releases
 - godcr mainnet release and proposal
+- mobile apps updated
 - revoked old tickets
 - proposals
 - Decred Magazine launch
@@ -34,7 +36,36 @@ Contents: { _Sync ToC at the very end, when all text is finished_ }
 - [Markets](#markets)
 - [Relevant External](#relevant-external)
 
-{ _Add individual sections for high-impact announcements before Development, such as consensus votes, software releases, milestones, major bugs, etc._ }
+
+## Four Consensus Changes Activated
+
+All four [consensus upgrades](https://docs.decred.org/governance/consensus-rule-voting/consensus-vote-archive/) added in v1.7 and approved by the stakeholders have activated on May 8, in [block 657,280](https://dcrdata.decred.org/block/657280):
+
+- [DCP-0007](https://github.com/decred/dcps/blob/master/dcp-0007/dcp-0007.mediawiki) - the algorithm controlling how much can be spent from the new treasury was fixed, removing a possible interruption in getting contractors paid.
+
+- [DCP-0008](https://github.com/decred/dcps/blob/master/dcp-0008/dcp-0008.mediawiki) - Decred doubles down on hard forks as the right way to upgrade consensus, "because we can". This helps all actors in the Decred ecosystem to integrate with new changes and write more robust code for handling transaction and script of different versions.
+
+- [DCP-0009](https://github.com/decred/dcps/blob/master/dcp-0009/dcp-0009.mediawiki) - miners will now revoke missed and expired tickets automatically. This removes a lot of user frustration when dealing with revocations, and especially the pains of lost (not backed up) redeem scripts. Wallet code and GUIs get simpler, staking becomes easier.
+
+- [DCP-0010](https://github.com/decred/dcps/blob/master/dcp-0010/dcp-0010.mediawiki) - 50% of the each block's reward is redirected from PoW miners to PoS voters, changing the split from 60/30/10 to 10/80/10 for PoW/PoS/treasury. This will hopefully rebalance the supply and demand of DCR and reduce the ability of malicious actors to manipulate the markets. As a byproduct of increased PoS rewards, staking DCR becomes more attractive. This was the [most debated proposal](https://proposals.decred.org/record/427e1d4) so far, but stakeholders said Yes and after around 6 months it is live.
+
+This is perhaps the biggest consensus upgrade in Decred's history.
+
+
+## Core Software v1.7.3 Released
+
+{ short summary, links, verify sigs reminder }
+
+
+## GoDCR v1.7.0 Released
+
+{ short summary, links, verify sigs reminder }
+
+
+## Android/iOS wallets v1.7.0 Released
+
+{ short summary, links, verify sigs reminder }
+
 
 ## Development
 
