some cleanup and Bored Ape case

--- a/journal/202205.md
+++ b/journal/202205.md
@@ -116,7 +116,6 @@ _dcrd is a full node implementation that powers Decred's peer-to-peer network ar
 The general direction in May was to further leverage the consensus changes that activated recently, by adding optimizations and removing unneeded code.
 
 - Optimized [stake node pruning](https://github.com/decred/dcrd/pull/2943) by using block headers instead of checkpoints (reducing dependency on the latter). Header-based sync operations are more efficient and pave the way to multi-peer block downloads.
-- Header proof logic has been [consolidated](https://github.com/decred/dcrd/pull/2937), resulting in the p2p and rpcserver handlers no longer needing to understand anything about the proofs. { _maybe remove as minor_ }
 - Retroactively fixed revocation [fee limit bug](https://github.com/decred/dcrd/pull/2948) that allowed one party to increase the fee paid to miners for another party in split transactions. This has never been exploited on `mainnet` and _can not_ be exploited since the automatic revocations agenda has activated.
 - Reworked [old block rejection](https://github.com/decred/dcrd/pull/2945) logic to replace the use of checkpoints with the `assumevalid` block (hard-coded in each release). Semantics have been clarified to reflect that "checkpoints" are now only used for handling old forks and are no longer used for optimizations (that now rely on other methods). The `--nocheckpoints` CLI option has been replaced with `--allowoldforks`. With this change, the role of checkpoints is reduced to a minimum, which is desirable since they are a kind of a workaround.
 - Removed the deprecated [address index](https://github.com/decred/dcrd/pull/2930) along with the associated CLI flags (`--addrindex` and `--dropaddrindex`) and `searchrawtransactions` JSON-RPC. Address index was a lot of overhead from a development perspective to maintain, it wasn't used by anything of note, and it didn't really easily provide what most people want from addresses anyway, which is a full balance as opposed to all of the individual transactions. All of the information it provided, and more, is available via dcrdata.
@@ -263,7 +262,6 @@ _GoDCR is a lightweight desktop GUI wallet with integrated staking, privacy, Pol
 
 { Also briefly cover:
 
-- proposal comms
 - Android/iOS builds have something working already
 
 }
@@ -298,8 +296,6 @@ _dcrweb is the source code for the decred.org website._
 Welcome to new first-time contributors with code merged to master: {@handle} ([{repo}]({link to user's commits})), ... !
 
 { ^ There are a few new contributors from Jan-Mar when we didn't release DJ. I think about greeting them here. }
-
-{ _Interviews with contributors. Link to #media for generic references (e.g. "Check the 3 interviews with devs") or link directly when referencing a specific interview._ }
 
 Community stats as of Jun 1 (compared to May 2):
 
@@ -418,7 +414,6 @@ Secured the following news articles:
 
 **Videos:**
 
-- [Decred block explorer - DCRDATA series part 1](https://www.youtube.com/watch?v=o4Cye1CRThs) by @phoenixgreen { remove, was in 202204 }
 - [Peer to Peer Exchange - Decred and the state of the market](https://www.youtube.com/watch?v=vqzaEdtmCsI) by @phoenixgreen and @Exitus
 - [Decred Monthly Recap - 2.66x increase in staking rewards, dev updates, big hard-fork inbound!](https://www.youtube.com/watch?v=uOHiDTj9Prs) by @Exitus and @DajanaDcr
 - [DCRDATA Looking into a block - Decred Fundamentals v2](https://www.youtube.com/watch?v=nsMrdK45cK8) by @phoenixgreen - also [in text](https://www.decredmagazine.com/dcrdata-looking-into-a-block/)
@@ -462,7 +457,7 @@ Insider trading in the crypto space is increasingly in the spotlight. The Wall S
 
 The former OpenSea product manager Nathaniel Chastain, who lost their job over profiting from the listing of NFTs on the OpenSea front page in September, has now been [arrested](https://www.cnbc.com/2022/06/01/former-opensea-employee-charged-in-first-ever-nft-insider-trading-case.html) and charged with insider trading by prosecutors in New York's Southern District. Although the NFTs in question are not the usual securities which insider trading laws apply to, the DA is alleging that Chastain injured his employer (OpenSea) by misappropriating information.
 
-Actor Seth Green [lost](https://www.buzzfeednews.com/article/sarahemerson/seth-green-bored-ape-stolen-tv-show) his bored ape in a phishing incident, made even more consequential by the fact that the ape had been set to star in a new show he was developing, *White Horse Tavern*. In June Green paid a $260,000 [ransom](https://www.businessinsider.com/seth-green-pays-260000-return-stolen-bored-ape-ethereum-nft-2022-6) to secure the return of the ape, so that the show could go on (without raising a lot of copyright questions over whether the stolen ape's image could be used).
+Actor Seth Green [lost](https://www.buzzfeednews.com/article/sarahemerson/seth-green-bored-ape-stolen-tv-show) his Bored Ape NFT in a phishing incident, made even more consequential by the fact that the ape had been set to star in a new show he was developing, *White Horse Tavern*. In June Green paid a $260,000 [ransom](https://www.businessinsider.com/seth-green-pays-260000-return-stolen-bored-ape-ethereum-nft-2022-6) to secure the return of the ape, so that the show could go on (without raising a lot of copyright questions over whether the stolen ape's image could be used).
 
 HEX { HEX? }
 
