Add bits, more cleanup

--- a/journal/202205.md
+++ b/journal/202205.md
@@ -2,15 +2,11 @@
 
 { _Only remove DRAFT from the title when all other todos are solved, at the very end. Search for `{` to see what's left._ }
 
-{ _Hint: Hints just add context. If it doesn't start with "Hint: ", it is a task. This was a hint._ }
-
-{ _Hint: Read the Guidelines on how to make DJ great: https://github.com/xaur/decred-news/blob/docs/guidelines.md ._}
-
 ![{alt text}](../img/{file.ext} "{hover tooltip text}")
 
 _Image: { "Title by @author. Description..." OR just "Description..." }_
 
-{ _Month's highlights, no links here, 5-7 bullets max._
+{ May was quite an epic month for Decred:
 
 - four consensus changes activated
 - core software releases
@@ -182,8 +178,6 @@ Changes in the pi-ui library (common UI elements for Politeia and Decrediton):
 - Support [keyboard navigation](https://github.com/decred/pi-ui/pull/446) in the `DatePicker` widget.
 - Added [info icon](https://github.com/decred/pi-ui/pull/447) with a tooltip to the text input field.
 
-{ image candidates: not seeing any }
-
 <a id="vspd" />
 
 **[vspd](https://github.com/decred/vspd)**
@@ -262,7 +256,7 @@ _GoDCR is a lightweight desktop GUI wallet with integrated staking, privacy, Pol
 
 Android and iOS builds of GoDCR [already function](https://proposals.decred.org/record/0ef42e5/comments/31) in some capacity, although there remains a lot of work to polish the mobile/touch UX.
 
-{ image candidates: one of the proposal's images, any other? }
+{ image candidates: one of the proposal's images }
 
 <a id="dcrdata" />
 
@@ -343,13 +337,11 @@ Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/dec
 
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=l2im68kw-l3x1522f&axis=time&visibility=true-true&mode=stepped) varied between 217-231 DCR, with 30-day [average](https://dcrstats.com/) at 223.6 DCR (+9.4).
 
-The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=l2im68kw-l3x1522f&scale=linear&bin=block&axis=time) was 8.78-9.07 million DCR, meaning that 62.6-63.9% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=l2im68kw-l3x1522f&scale=linear&bin=block&axis=time) in Proof of Stake.
+The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=l2im68kw-l3x1522f&scale=linear&bin=block&axis=time) was 8.78-9.07 million DCR, meaning that 62.6-63.9% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=l2im68kw-l3x1522f&scale=linear&bin=block&axis=time) in Proof of Stake. Both DCR and percentage values are the new ATHs.
 
 All missed and expired tickets [have been revoked](https://github.com/decred/dcrd/pull/2861#issuecomment-1144049589) - a total of 1,719 tickets worth 175,957 DCR (average price 103 DCR per ticket). ~45K of that DCR have moved already, while the remaining ~131K DCR are likely lost due to lost seeds and other reasons. One of the revoked tickets was from block 767, when tickets were [quite expensive](https://forum.decred.org/threads/are-you-still-purchasing-at-current-price-4-55-dcr.840/) already.
 
 All new missed votes are revoked automatically, the first one going in block [657295](https://dcrdata.decred.org/block/657295).
-
-{ maybe a separate section to tell about this massive revocation? or maybe we have enough special sections already }
 
 **VSP**: On Jun 1, ~6,900 (+120) live tickets were managed by 16 [listed](https://decred.org/vsp/) vspd servers, or 16.8% of the ticket pool (+0.2%).
 
@@ -445,7 +437,7 @@ In May DCR was trading between USD 30.00-58.68 / BTC 0.00103-0.00190. The averag
 
 @Applesaucesome is posting technical analysis of DCR, crypto, and the broader market on the new [Decred Magazine](https://www.decredmagazine.com/author/applesaucesome/) website, about once a week.
 
-{ _DCRDEX updates, esp. trading volume dynamics._ }
+In May, DCRDEX has traded [~74K DCR](https://github.com/bochinchero/dcrsnapshots/tree/main/2022-05/700), equivalent of ~3M USD.
 
 
 ## Relevant External
