mark image slots

--- a/journal/202205.md
+++ b/journal/202205.md
@@ -2,7 +2,7 @@
 
 { _Only remove DRAFT from the title when all other todos are solved, at the very end. Search for `{` to see what's left._ }
 
-![{alt text}](../img/{file.ext} "{hover tooltip text}")
+![{alt text}](../img/{202205.1.ext} "{hover tooltip text}")
 
 _Image: { "Title by @author. Description..." OR just "Description..." }_
 
@@ -60,7 +60,7 @@ dcrd and dcrwallet v1.7.2 have been [released](https://twitter.com/decredproject
 
 Verify the downloads using [these instructions](https://docs.decred.org/advanced/verifying-binaries/) to ensure they have not been modified. The binaries are signed with Decred Release subkey ending with `6D897EDF518A031D` (primary key ends with `6DF634AA7608AF04`).
 
-{ image: 1 best image of Decrediton v1.7.3 - optional }
+{ image 202205.2: 1 best image of Decrediton v1.7.3 - optional }
 
 
 ## GoDCR v1.7.0 Released
@@ -82,7 +82,7 @@ The following features are supported:
 
 This is just the start for GoDCR. Up next is DEX trading, coin selection, treasury spend voting, and building as Android/iOS apps to have a unified codebase for all platforms. Check the [proposal](https://proposals.decred.org/record/0ef42e5) to fund this work in 2022-2023.
 
-{ image: 1 best image of GoDCR v1.7.0 - optional }
+{ image 202205.3: 1 best image of GoDCR v1.7.0 - optional }
 
 
 ## Android and iOS Wallets v1.7.0 Released
@@ -100,7 +100,7 @@ Mainnet iOS app is available on the [App Store](https://apps.apple.com/us/app/de
 
 Android app is available on Google [Play Store](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet) and as an [APK download](https://github.com/planetdecred/dcrandroid/releases/tag/v1.7.0). The latter comes with a digital signature by key ending with `A3C9EB3218CCC3E8`.
 
-{ image: 1 best image of v1.7.0 - optional }
+{ image 202205.4: 1 best image of v1.7.0 - optional }
 
 
 ## Development
@@ -154,7 +154,7 @@ Merged and released with May's v1.7.2 and v1.7.3 patches:
 - Electron (The framework Decredtion is built on) has been [bumped to v17.4.2](https://github.com/decred/decrediton/pull/3765) to fix an issue that prevented dcrwallet/dcrd from launching on macOS 10.15 (Catalina).
 - ~7 bug fixes
 
-{ image candidates: 3752 }
+{ image 202205.5: 3752 }
 
 <a id="politeia" />
 
@@ -230,7 +230,7 @@ Dev team has started a discussion on [rebranding DCRDEX](https://www.reddit.com/
 
 > Probably found a vendor to perform an audit of our Solidity atomic swap contracts. Notably, our contracts are so simple, we're under their minimum order size. That's what happens when you're not trying to extract trading fees and there's no admin functionality. \[[@blockchainbuck](https://twitter.com/blockchainbuck/status/1527105721724190722)\]
 
-{ image candidates: 1555! }
+{ image 202205.6: 1555! }
 
 <a id="dcrios" />
 
@@ -260,7 +260,7 @@ _GoDCR is a lightweight desktop GUI wallet with integrated staking, privacy, Pol
 
 Android and iOS builds of GoDCR [already function](https://proposals.decred.org/record/0ef42e5/comments/31) in some capacity, although there remains a lot of work to polish the mobile/touch UX.
 
-{ image candidates: one of the proposal's images }
+{ image 202205.7: one of the proposal's images }
 
 <a id="dcrdata" />
 
@@ -333,7 +333,7 @@ See Politeia Digest [issue 51](https://blockcommons.red/politeia-digest/issue051
 
 **Hashrate**: May's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=l2im68kw-l3x1522f&bin=block&axis=time) opened at ~345 Ph/s and closed ~115 Ph/s, bottoming at 74 Ph/s and peaking at 381 Ph/s throughout the month.
 
-{ hashrate chart is a must this month }
+{ image 202205.8: hashrate chart is a must this month }
 
 Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Jun 1: Poolin 55%, ViaBTC 21%, F2Pool 7%, AntPool 7%, Luxor 5%, BTC.com 4%, CoinMine 0.3%.
 
@@ -388,7 +388,7 @@ Secured the following news articles:
 
 - Edson Neto [talked about](https://twitter.com/Decred_BR/status/1529089788199976960) Decred at [Bitconf](https://www.instagram.com/p/Cd6sL2wLHU7/) in Sao Paulo, Brazil.
 
-{ image candidates: check the links above }
+{ image 202205.9: bitconf 1st pic }
 
 **Upcoming:**
 
