--- a/journal/202205.md
+++ b/journal/202205.md
@@ -8,13 +8,12 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 { May was quite an epic month for Decred:
 
-- four consensus changes activated
-- core software releases
-- godcr mainnet release and proposal
-- mobile apps updated
-- revoked old tickets
-- proposals
-- Decred Magazine launch
+- The four consensus changes (DCP0007-10) recently approved by voters have activated on mainnet.
+- There have been two interim bug fixing releases of the main software, v1.7.2 and v1.7.3.
+- GoDCR v1.7.0 has been released, the first version which is intended for mainnet use - and a new proposal for funding has been published.
+- Decred Magazine launched, it is a new platform for hosting and sharing Decred news and other content spearheaded by @phoenixgreen.
+- All of the old failed tickets which didn't get revoked by their owners have now been revoked thanks to the activation of DCP-0009.
+- Proposals for the Journal/Digest, translations, and the bug bounty program were approved with 99% Yes votes.
 
 }
 
