202205: use extra image

--- a/journal/202205.md
+++ b/journal/202205.md
@@ -357,6 +357,10 @@ Legacy (dcrstakepool) tickets can no longer be voted since May 8 when the chain 
 
 Node versions as of Jun 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (160 total, dcrd only): v1.7.1 - 41%, v1.7.2 - 20%, v1.7.0 - 12%, v1.7.0 dev builds - 9%, v1.8.0 dev builds - 4%, v1.6.x - 6%, v1.5.x - 4%.
 
+![](../img/202205.10.github.png)
+
+_Image: Mixed and unspent % crawling up._
+
 
 ## Ecosystem
 
