use title image

--- a/journal/202205.md
+++ b/journal/202205.md
@@ -1,5 +1,9 @@
 # Decred Journal – May 2022
 
+![abstract art by @saender](../img/202205.1.github.png)
+
+_Image: Point Integral by @saender_
+
 May was quite an epic month for Decred:
 
 - The four consensus changes (DCP0007-10) recently approved by voters have activated on mainnet.
