--- a/journal/202206.md
+++ b/journal/202206.md
@@ -1,4 +1,4 @@
-# {DRAFT} Decred Journal – {month} {year}
+# {DRAFT} Decred Journal – June 2022
 
 { _Only remove DRAFT from the title when all other todos are solved, at the very end. Search for `{` to see what's left._ }
 
@@ -306,7 +306,7 @@ Community stats as of {date}:
 
 { _Hint: Currently this is a mix of finances and governance. We may add the separate Finances section in the future._ }
 
-In {month} the new [treasury](https://dcrdata.decred.org/treasury) received {n} DCR worth ${} at month's average rate of ${}. {} DCR was spent to pay contractors, worth ${} at {month}'s rate, or ${} at {prev month}'s billing rate of ${}.
+In June the new [treasury](https://dcrdata.decred.org/treasury) received {n} DCR worth ${} at month's average rate of ${}. {} DCR was spent to pay contractors, worth ${} at June's rate, or ${} at May's billing rate of $41.46.
 
 As of {date}, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is {n} DCR ({n} million USD at ${n.nn}).
 
@@ -327,7 +327,7 @@ See Politeia Digest [issue {}]({}) and [issue {}]({}) for more details on the mo
 
 { _Hint: n, n.n, and n.nn tell how many decimals to keep, e.g. 100, 16.5, 8.63_ }
 
-**Hashrate**: {month}'s [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=block&axis=time) {_set zoom to show the month_} opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month.
+**Hashrate**: June's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=block&axis=time) {_set zoom to show the month_} opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month.
 
 Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on {date}: {PoolName n%, ...}.
 
@@ -343,7 +343,7 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&sc
 
 **VSP**: On {date}, ~{n} (+{n}) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers. Collectively the {n} VSPs managed {n.n}% of the ticket pool (+{n.n}%).
 
-**Nodes**: Throughout {month} there were around {n} reachable nodes according to [PD Analytics](https://analytics.planetdecred.org/nodes).
+**Nodes**: Throughout June there were around {n} reachable nodes according to [PD Analytics](https://analytics.planetdecred.org/nodes).
 
 Node versions as of {date} [snapshot](https://nodes.jholdstock.uk/user_agents) ({n} total, dcrd only): { vX.Y.Z - n%, ... }
 
@@ -441,7 +441,7 @@ Selected Twitter discussions:
 
 ## Markets
 
-In {month} DCR was trading between USD {n.nn}-{n.nn} / BTC {n.nnnnn}-{n.nnnnn}. The average daily rate was ${n.nn}.
+In June DCR was trading between USD {n.nn}-{n.nn} / BTC {n.nnnnn}-{n.nnnnn}. The average daily rate was ${n.nn}.
 
 { _Optional: Markets overview, USD and BTC price trends, highs and lows, interesting events, interesting analysis._ }
 
@@ -464,12 +464,12 @@ In {month} DCR was trading between USD {n.nn}-{n.nn} / BTC {n.nnnnn}-{n.nnnnn}. 
 
 { _Other: Regulations, privacy, security, fun._ }
 
-That's all for {month}. Share your updates for the next issue in our [#journal](https://chat.decred.org/#/room/#journal:decred.org) chat room.
+That's all for June. Share your updates for the next issue in our [#journal](https://chat.decred.org/#/room/#journal:decred.org) chat room.
 
 
 ## About
 
-This is issue {number} of Decred Journal. Index of all issues, mirrors, and translations is available [here](https://xaur.github.io/decred-news/).
+This is issue 48 of Decred Journal. Index of all issues, mirrors, and translations is available [here](https://xaur.github.io/decred-news/).
 
 Most information from third parties is relayed directly from the source after a minimal sanity check. The authors of the Decred Journal cannot verify all claims. Please beware of scams and do your own research.
 
