Gov copy from 202205 draft + notes

--- a/journal/202206.md
+++ b/journal/202206.md
@@ -215,7 +215,7 @@ _TinyDecred is a toolkit for integrating Decred into Python projects. It include
 
 { _Check https://github.com/decred/tinydecred/commits/master ._ }
 
-- {}
+- { buck has been hacking on something very interesting, ask him for the details https://matrix.to/#/!pzavcGbNMqkWfglXQD:decred.org/$ci88l_0Qa7W_uNgz12KXXs5fV49FmFjmuANJMAWevcg }
 
 <a id="dcrros" />
 
@@ -308,13 +308,21 @@ Community stats as of {date}:
 
 In June the new [treasury](https://dcrdata.decred.org/treasury) received {n} DCR worth ${} at month's average rate of ${}. {} DCR was spent to pay contractors, worth ${} at June's rate, or ${} at May's billing rate of $41.46.
 
+{ first spend on the new spending rules? describe it }
+
 As of {date}, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is {n} DCR ({n} million USD at ${n.nn}).
 
 { _Report any other activity with the legacy or new treasury._ }
 
-{ _High-level recap of decision-making activity and most important events._ }
+Voting was held for four proposals, three of which were approved and one failed to reach the quorum requirement.
 
-- {}
+The [proposal](https://proposals.decred.org/record/4fdef29) to fund Decred Journal and Politeia Digest was approved with 99% Yes votes and turnout of 56%. A detailed report on the 2021 proposal's deliverables and finances was published [here](https://github.com/decredcommunity/proposals/blob/master/proposals/1d74b88/updates/20220521.md).
+
+The [proposal](https://proposals.decred.org/record/7057e0b) to fund Decred content and asset translations was approved with 99% Yes votes and turnout of 56%.
+
+The [proposal](https://proposals.decred.org/record/da2f32d) to fund continuation of the Bug Bounty program was approved with 99% Yes votes and turnout of 56%.
+
+The [proposal](https://proposals.decred.org/record/6bdffcb) to fund university events in Uganda was rejected with 47% Yes votes and turnout of 6%.
 
 { _Check https://github.com/decredcommunity/proposals/commits/master for updates._ }
 
