--- a/journal/202206.md
+++ b/journal/202206.md
@@ -374,6 +374,10 @@ Node versions as of {date} [snapshot](https://nodes.jholdstock.uk/user_agents) (
 
 { _Check https://github.com/decred/dcrweb/commits/master to detect added/removed services._ }
 
+https://twitter.com/jz_bz/status/1535350896091189249 - JZ Set up a #Decred node in one easy step.
+https://jobsonblocks.com/ - Offer/request jobs - get paid in Crypto. DCR included.
+
+
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
 
