--- a/journal/202206.md
+++ b/journal/202206.md
@@ -397,7 +397,8 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 **Attended:**
 
-- {}
+- https://decredcommunity.github.io/events/index/20220601.1
+- [Decred Social Meetup](https://www.meetup.com/chicago-decred-meetup/events/286491971/) in Chicago, USA. { _check if it happened, tell something about it_ }
 
 **Upcoming:**
 
