--- a/journal/202206.md
+++ b/journal/202206.md
@@ -174,8 +174,12 @@ _DCRDEX is a non-custodial exchange for trustless trading, powered by atomic swa
 - Added support for [mixed DCR](https://github.com/decred/dcrdex/pull/1498) accounts.
 - Added results of the first ETH [smart contract audit](https://github.com/decred/dcrdex/pull/1643) performed by InterFi Network (mirrored in [their repo](https://github.com/interfinetwork/smart-contract-audits/blob/audit-updates/DecredDEX_AuditReport_InterFi.pdf)). The audit concluded that Solidity code has low risk severity and "Decred DEX's centralization risk correlated to the active owner is NULL".
 - Fixed [funds unlocking](https://github.com/decred/dcrdex/pull/1642) math for smaller lot sizes.
-- Redesigned [connection management](https://github.com/decred/dcrdex/pull/1474) to be more robust and have a nicer API. { _Guessing a bit here._ }
+- Redesigned [connection management](https://github.com/decred/dcrdex/pull/1474) to be more robust and have a nicer API. { _guessing a bit here._ }
 - Print better [version and compatibility](https://github.com/decred/dcrdex/pull/1645) info in `dexcctl` output.
+- Fixed UI lock when connecting to an [offline server](https://github.com/decred/dcrdex/pull/1647). { _minor, group_ }
+- Added a button to [copy address](https://github.com/decred/dcrdex/pull/1639) on the Wallets page. { _minor, maybe group_ }
+- Made cancel button [change to spinner](https://github.com/decred/dcrdex/pull/1640) and report any errors in the form.
+- Added utility for running different combinations of client [harness tests](https://github.com/decred/dcrdex/pull/1632) on simnet.
 
 <a id="dcrandroid" />
 
