Eco add BisonPool todo

--- a/journal/202206.md
+++ b/journal/202206.md
@@ -386,6 +386,8 @@ Node versions as of {date} [snapshot](https://nodes.jholdstock.uk/user_agents) (
 
 { _Check https://github.com/decred/dcrweb/commits/master to detect added/removed services._ }
 
+- BisonPool coverage, write up from https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$f8rOaEpmCcfyRirT591J7PxG7oGzLN7zCPNS5AhDgZU
+
 https://twitter.com/jz_bz/status/1535350896091189249 - JZ Set up a #Decred node in one easy step.
 
 https://jobsonblocks.com/ - Offer/request jobs - get paid in Crypto. DCR included.
