--- a/journal/202206.md
+++ b/journal/202206.md
@@ -12,7 +12,7 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 { _Month's highlights, no links here, 5-7 bullets max._
 
-- 
+- Ethereum smart contract used in DCRDEX passed its first audit with great results.
 - 
 - 
 - 
@@ -171,15 +171,22 @@ _DCRDEX is a non-custodial exchange for trustless trading, powered by atomic swa
 
 { _Check https://github.com/decred/dcrdex/commits/master ._}
 
+{ _Group changes by User-facing/internal/dev, or by asset._ }
+
 - Added support for [mixed DCR](https://github.com/decred/dcrdex/pull/1498) accounts.
 - Added results of the first ETH [smart contract audit](https://github.com/decred/dcrdex/pull/1643) performed by InterFi Network (mirrored in [their repo](https://github.com/interfinetwork/smart-contract-audits/blob/audit-updates/DecredDEX_AuditReport_InterFi.pdf)). The audit concluded that Solidity code has low risk severity and "Decred DEX's centralization risk correlated to the active owner is NULL".
 - Fixed [funds unlocking](https://github.com/decred/dcrdex/pull/1642) math for smaller lot sizes.
 - Redesigned [connection management](https://github.com/decred/dcrdex/pull/1474) to be more robust and have a nicer API. { _guessing a bit here._ }
 - Print better [version and compatibility](https://github.com/decred/dcrdex/pull/1645) info in `dexcctl` output.
-- Fixed UI lock when connecting to an [offline server](https://github.com/decred/dcrdex/pull/1647). { _minor, group_ }
 - Added a button to [copy address](https://github.com/decred/dcrdex/pull/1639) on the Wallets page. { _minor, maybe group_ }
 - Made cancel button [change to spinner](https://github.com/decred/dcrdex/pull/1640) and report any errors in the form.
 - Added utility for running different combinations of client [harness tests](https://github.com/decred/dcrdex/pull/1632) on simnet.
+- Added support for [Zcash](https://github.com/decred/dcrdex/pull/1570) (decoding blocks and transactions, signing inputs, tests).
+- Upgraded to [Litecoin v0.21.2](https://github.com/decred/dcrdex/pull/1536). Custom decoding of block and transaction data was added to support Litecoin's new [Extension Blocks](https://github.com/litecoin-project/lips/blob/master/lip-0002.mediawiki) and a [MimbleWimble sidechain](https://github.com/litecoin-project/lips/blob/master/lip-0003.mediawiki).
+- Added [metering](https://github.com/decred/dcrdex/pull/1629) where processing of new blocks will not be triggered more frequent than every 10 seconds. e.g. in Ethereum occasionally several blocks are generated in a single second.
+
+
+- Numerous smaller fixes and improvements { 1647 1651 1655 1665 }
 
 <a id="dcrandroid" />
 
