--- a/journal/202206.md
+++ b/journal/202206.md
@@ -242,7 +242,9 @@ _dcrdata is an explorer for Decred blockchain and off-chain data like Politeia p
 
 { _Check https://github.com/decred/dcrdata/commits/master ._}
 
-- {}
+- [Updated](https://github.com/decred/dcrdata/commit/1ffabcb9e12a654fc598b1a4e7d6c4433b55aadd) btcd in swapscan-btc.
+- Bumped [module](https://github.com/decred/dcrdata/commit/a8c7caceb3d1b3bc8a6fd2bf1e584ed31dc8bd4d) major versions.
+- Fixed incorrect [vote status](https://github.com/decred/dcrdata/commit/42f99bfd9d737f84276ccec0f491a04b730a5478) display. 
 
 <a id="tinydecred" />
 
