--- a/journal/202206.md
+++ b/journal/202206.md
@@ -93,7 +93,9 @@ _Decrediton is a full-featured desktop wallet app with integrated voting, StakeS
 
 { _Check https://github.com/decred/decrediton/commits/master ._}
 
-- {}
+- Added a [ticket spent](https://github.com/decred/decrediton/pull/3770) entry to the revocation transaction details page.
+- [Fixed a bug](https://github.com/decred/decrediton/pull/3771) where scrolling didn't work when UI animations were disabled.
+- Fixed a bug in the Treasury Spending tab where a [never ending loading](https://github.com/decred/decrediton/pull/3769) button would occur.
 
 <a id="politeia" />
 
